--- a/src/style.css
+++ b/src/style.css
@@ -22,14 +22,15 @@ body {
     max-width: 1280px;
 }
 /*div для фотки зверху*/
-#karmniczek_obrazek {
-    position: relative;
-    width: 300px;
-    height: 200px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 20px
+#logo {
+    width: 100%;
+    padding-bottom: 25px;
+}
+#nname {
+    position: fixed;
+    padding: 10px;
+    width: 100%;
+    background-color: white;
 }
 
 /*golovne menu - tekst sho w centri*/
@@ -59,7 +60,8 @@ body {
     display: inline-block;
     border-radius: 12px;
     text-align: center;
-    position: relative;
+    position: absolute;
+
     left: 45.5%;
     font-size: 16px;
     cursor: pointer;
@@ -97,7 +99,6 @@ body {
     text-align: center;
     font-size: 17px;
     font-weight: bold;
-    position: relative;
     overflow: hidden;
     width: 800px;
     height:70px;
