--- a/src/style.css
+++ b/src/style.css
@@ -144,19 +144,22 @@ body {
 }
 /*golovne menu - authors*/
 #authors_bar {
-     
     display: flex;
-    justify-content: space-between;
-    padding: 10px 0;
+    padding: 15px;
     margin-top: 5%;
-    width: 100%;
-    overflow: hidden;
-    position: relative;
-    bottom: 0;
+    position: static;
+    
+} 
+.h3s {
+    display: flex;
+    margin-block: 1%;
+    margin-inline-end: 2%;
 }
 
+
+
 #authors_bar > div {
-    
+    padding-inline-end: 5%;
 }
 
 #ptaszek_uwu {
