--- a/src/style.css
+++ b/src/style.css
@@ -10,16 +10,29 @@ html {
 body {
     height: 100%;
     margin: 0;
-    background-color: #d8d8d8;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-color: #2c2c2c;
+    background-repeat: inherit; 
+    background-image: url("bluedron.jpg");
+    color: white;
+    text-shadow: 1.5px 1px black;
+    letter-spacing: 1.5px;
+    font-family: Arial, Helvetica, sans-serif;
+    
 }
+#myimage{
+    padding-block: 25px;
+}
+
 
 /*golovne menu - to sho w centri*/
 .contentBox {
     margin: auto;
     padding: 10px;
-    max-width: 1280px;
+    width: 80%;
+    background-color: #296094c4;
+    padding-block: 20px;
+    padding-bottom: 80PX;
+    border-radius: 15px;
 }
 /*div для фотки зверху*/
 #logo {
@@ -30,7 +43,9 @@ body {
     position: fixed;
     padding: 10px;
     width: 100%;
-    background-color: white;
+    background-color: #396dddfb;
+    font-weight: bold;
+    
 }
 
 /*golovne menu - tekst sho w centri*/
@@ -48,9 +63,9 @@ body {
 .form_input {
     border-color: black;
     padding: 8px 12px;
-    border-radius: 12px;
     font-size: 14px;
     text-align: center;
+    
 }
 
 .form_button {
@@ -58,10 +73,9 @@ body {
     font-weight: bold;
     letter-spacing: 0.5px;
     display: inline-block;
-    border-radius: 12px;
     text-align: center;
     position: absolute;
-
+    border-radius: 9px;
     left: 45.5%;
     font-size: 16px;
     cursor: pointer;
@@ -88,7 +102,6 @@ body {
 .input_table {
     padding: 8px 12px;
     border-color: black;
-    border-radius: 12px;
     width: 40%;
     font-size: 14px;
     font-weight: bold;
@@ -110,7 +123,7 @@ body {
 }
 
 .table_header{
-    background-color: #747474d3; 
+    background-color: #616168bd; 
 }
 
 .mrpDescription{
@@ -134,7 +147,6 @@ body {
 .mrpDescription_input{
     padding: 8px 12px;
     border: black 1px solid;
-    border-radius: 12px;
     margin-left: 10px;
     margin-right: 70%;
     width: 70px;
@@ -145,9 +157,13 @@ body {
 /*golovne menu - authors*/
 #authors_bar {
     display: flex;
-    padding: 15px;
     margin-top: 5%;
     position: static;
+    background-color: #2b5f91ce;
+    width: 600px;
+    border-radius: 15px;
+    padding-inline: 10px;
+
     
 } 
 .h3s {
@@ -160,12 +176,4 @@ body {
 
 #authors_bar > div {
     padding-inline-end: 5%;
-}
-
-#ptaszek_uwu {
-    width: 40px;
-    height: 40px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
 }
